--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -245,6 +245,8 @@
     <string name="error_site_authentication_failed">Ověření %1$s se nezdařilo</string>
     <string name="error_http_401_site_authorization_failed">%1$s autorizace skončila chybou.</string>
     <string name="error_storage_no_space_left">Nedostatečné úložiště.</string>
+    <string name="error_http_403_site_forbidden">%1$s zablokoval přístup.</string>
+    <string name="error_http_403_forbidden">Webová stránka zablokovala přístup.</string>
     <string name="error_storage_not_accessible">Zkontrolujte, zda je úložiště přístupné.</string>
     <string name="error_storage_not_writable">Zkontrolujte, zda je úložiště zapisovatelné a má dostatek místa.</string>
     <string name="error_unexpected">Neznámá chyba.</string>
