--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -230,6 +230,8 @@
     <string name="error_site_authentication_failed">%1$s authenticatie mislukt</string>
     <string name="error_http_401_site_authorization_failed">%1$s autorisatie leidde tot een fout.</string>
     <string name="error_storage_no_space_left">Onvoldoende opslag beschikbaar.</string>
+    <string name="error_http_403_site_forbidden">%1$s heeft de toegang geblokkeerd.</string>
+    <string name="error_http_403_forbidden">De website heeft de toegang geblokkeerd.</string>
     <string name="error_storage_not_accessible">Controleer aub of opslag toegankelijk is.</string>
     <string name="error_storage_not_writable">Controleer aub of opslag beschrijfbaar is en voldoende vrije ruimte heeft.</string>
     <string name="error_unexpected">Er is een onbekende fout opgetreden.</string>
