--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -231,6 +231,8 @@
     <string name="error_site_authentication_failed">Ο έλεγχος ταυτότητας %1$s απέτυχε</string>
     <string name="error_http_401_site_authorization_failed">Η αδειοδότηση του %1$s οδήγησε σε λάθος.</string>
     <string name="error_storage_no_space_left">Ανεπαρκής χώρος αποθήκευσης.</string>
+    <string name="error_http_403_site_forbidden">%1$s έχει μπλοκάρει την πρόσβαση.</string>
+    <string name="error_http_403_forbidden">Ο ιστότοπος έχει μπλοκάρει την πρόσβαση.</string>
     <string name="error_storage_not_accessible">Βεβαιωθείτε ότι έχετε πρόσβαση στο χώρο αποθήκευσης.</string>
     <string name="error_storage_not_writable">Ελέγξτε ότι η αποθήκευση είναι εγγράψιμη και έχει αρκετό χώρο.</string>
     <string name="error_unexpected">Ένα άγνωστο σφάλμα συνέβη.</string>
