--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -763,4 +763,5 @@
     <string name="info_maintenance_clear_deleted_book_records">Cancella la cronologia dei libri eliminati. Non verranno eliminati libri veri e propri.</string>
     <string name="info_books_deleted">Libri cancellati: %1$d</string>
     <string name="progress_msg_x_deleted">%1$d cancellato</string>
+    <string name="action_undo">Annulla</string>
 </resources>
