--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -773,4 +773,5 @@
     <string name="error_type_not_supported">Тип не поддерживается: %1$s …</string>
     <string name="info_books_deleted">Книги удалены: %1$d</string>
     <string name="progress_msg_x_deleted">%1$d удалено</string>
+    <string name="action_undo">Отменить</string>
 </resources>
