--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,7 +27,26 @@
     <string name="a_bracket_b_bracket">%1$s（%2$s）</string>
     <string name="list_element">• %s</string>
     <string name="name_hash_nr">%1$s #%2$d</string>
+    <string name="whichEditApplication">编辑方式</string>
+    <string name="whichSendApplication">分享</string>
+    <string name="whichViewApplication">打开方式</string>
     <string name="x_of_y">%1$d本 • 共%2$d本</string>
+    <string name="action_add">添加</string>
+    <string name="action_clear">创建</string>
+    <string name="action_create">创建</string>
+    <string name="action_delete">删除</string>
+    <string name="action_discard">舍弃</string>
+    <string name="action_done">完成</string>
+    <string name="X_action_go">开始</string>
+    <string name="action_help">帮助</string>
+    <string name="action_not_now">以后再说</string>
+    <string name="action_reset_to_default">重置为默认设置</string>
+    <string name="action_retry">重试</string>
+    <string name="action_save">保存</string>
+    <string name="action_search">搜索</string>
+    <string name="action_select">选择</string>
+    <string name="action_show_all">全部显示</string>
+    <string name="action_skip">跳过</string>
     <string name="and_others">%1$s …</string>
     <string name="notification_channel_warn">警告</string>
     <string name="notification_channel_info">信息</string>
@@ -49,6 +68,8 @@
     <string name="error_network_failed_try_again">请检查您的网络连接后重试。</string>
     <string name="error_http_401_authorization_failed">验证失败</string>
     <string name="error_http_401_site_authorization_failed">%1$s 验证导致错误。</string>
+    <string name="X_action_next">下一步</string>
+    <string name="X_action_previous">上一页</string>
     <string name="X_error_authentication_failed">验证失败</string>
     <string name="error_site_authentication_failed">%1$s验证失败</string>
     <string name="error_storage_not_accessible">请检查App存储权限。</string>
@@ -76,6 +97,7 @@
     <string name="name_colon_value">%1$s：%2$s</string>
     <string name="and_others_plus">%1$s … <small>[+%2$d]</small></string>
     <string name="fallback_currency_format">%1$s %2$.2f</string>
+    <string name="no">取消</string>
     <string name="notification_channel_error">出错了</string>
     <string name="debug_email_body">请简述您遇到的问题。</string>
     <string name="acra_resDialogText">&APP_NAME;出错了。请在下面描述您认为可能相关的任何内容，然后按“确定”向我们发送有关崩溃的电子邮件。 您可以在发送前确认电子邮件的内容。</string>
@@ -161,6 +183,7 @@
     <string name="progress_msg_upgrading">更新中…</string>
     <string name="progress_msg_rebuilding_search_index">重建搜索索引…</string>
     <string name="info_authorized">已授权</string>
+    <string name="yes">确定</string>
     <string name="info_story_in_single_book">“%1$s” 存在与一本书中：
 \n
 \n%2$s</string>
@@ -223,6 +246,8 @@
     <string name="bob_empty_year">（未设置出版年）</string>
     <string name="bob_empty_month">（未设置出版月）</string>
     <string name="bob_empty_day">（未设置）</string>
+    <string name="action_email">电子邮件</string>
+    <string name="action_learn_more">了解详情</string>
     <string name="size_bytes">%1$.0fB</string>
     <string name="size_hidden">已隐藏</string>
     <string name="book_format_softcover">软封面</string>
@@ -236,4 +261,5 @@
     <string name="book_format_dimensions">方向</string>
     <string name="book_color_black_and_white">黑白本</string>
     <string name="style_builtin_author_series">作者，系列</string>
+    <string name="action_undo">撤消</string>
 </resources>
