--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1588,5 +1588,7 @@
     <string name="X_lbl_folder">Folder</string>
     <!-- endregion -->
 
+    <string name="info_nothing_to_do">Nothing to do</string>
+
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 </resources>
